Fixup styling of lists, aligning text and avoiding splits between lists a user may have

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -206,7 +206,8 @@ ul.items {
 .item-row .buygroup .oldprice {
   color: gray;
   font-size: 90%;
-  vertical-align: bottom;
+  position: relative;
+  bottom: -1.5pt;
 }
 
 .price.cheaper {
